Adds more logos and stubs out experience
Still a work in progress and building on more content in the About page.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>NVZ - Home</title>
-  <base href="/personal-website/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>NVZ - Home</title>
+    <base href="/personal-website/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
+  <!-- Technology & Language Logos -->
+  <link rel="preload" as="image" href="assets/logos/angular.png" />
+  <link rel="preload" as="image" href="assets/logos/angularjs.png" />
+  <link rel="preload" as="image" href="assets/logos/auth0.png" />
+  <link rel="preload" as="image" href="assets/logos/aws-lambda.png" />
+  <link rel="preload" as="image" href="assets/logos/aws-rds.png" />
+  <link rel="preload" as="image" href="assets/logos/aws-s3.png" />
+  <link rel="preload" as="image" href="assets/logos/aws.png" />
+  <link rel="preload" as="image" href="assets/logos/docker.png" />
+  <link rel="preload" as="image" href="assets/logos/heroku.png" />
+  <link rel="preload" as="image" href="assets/logos/html.png" />
+  <link rel="preload" as="image" href="assets/logos/java.png" />
+  <link rel="preload" as="image" href="assets/logos/javascript.png" />
+  <link rel="preload" as="image" href="assets/logos/jenkins.png" />
+  <link rel="preload" as="image" href="assets/logos/mysql.png" />
+  <link rel="preload" as="image" href="assets/logos/netlify.png" />
+  <link rel="preload" as="image" href="assets/logos/ngrok.jpeg" />
+  <link rel="preload" as="image" href="assets/logos/nodejs.png" />
+  <link rel="preload" as="image" href="assets/logos/react.png" />
+  <link rel="preload" as="image" href="assets/logos/scss.png" />
+  <link rel="preload" as="image" href="assets/logos/twilio.png" />
+  <link rel="preload" as="image" href="assets/logos/typescript.png" />
+  <link rel="preload" as="image" href="assets/logos/webpack.png" />
+  <!-- Project Logos -->
+  <link rel="preload" as="image" href="assets/project-logos/bound-athlete.png" />
 </html>
