--- a/index.html
+++ b/index.html
@@ -36,4 +36,7 @@
   <link rel="preload" as="image" href="assets/logos/webpack.png" />
   <!-- Project Logos -->
   <link rel="preload" as="image" href="assets/project-logos/bound-athlete.png" />
+  <!-- Miscellaneous -->
+  <link rel="preload" as="image" href="assets/logos/gmail.png" />
+  <link rel="preload" as="image" href="assets/logos/instagram.png" />
 </html>
