Adds CAI experience and more logos
Create function to sort experience so it is always in the correct order.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
   <link rel="preload" as="image" href="assets/logos/twilio.png" />
   <link rel="preload" as="image" href="assets/logos/typescript.png" />
   <link rel="preload" as="image" href="assets/logos/webpack.png" />
+  <link rel="preload" as="image" href="assets/logos/word.png" />
+  <link rel="preload" as="image" href="assets/logos/powerpoint.png" />
+  <link rel="preload" as="image" href="assets/logos/excel.png" />
+  <link rel="preload" as="image" href="assets/logos/python.png" />
+  <link rel="preload" as="image" href="assets/logos/microstrategy.png" />
   <!-- Project Logos -->
   <link rel="preload" as="image" href="assets/project-logos/bound-athlete.png" />
   <!-- Miscellaneous -->
