Adds more logos and completes experience data
Adds some data for interests.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
   <link rel="preload" as="image" href="assets/logos/excel.png" />
   <link rel="preload" as="image" href="assets/logos/python.png" />
   <link rel="preload" as="image" href="assets/logos/microstrategy.png" />
+  <link rel="preload" as="image" href="assets/logos/mongodb.png" />
+  <link rel="preload" as="image" href="assets/logos/flask.png" />
+  <link rel="preload" as="image" href="assets/logos/aws-iam.png" />
+  <link rel="preload" as="image" href="assets/logos/alexa.png" />
+  <link rel="preload" as="image" href="assets/logos/ruby.png" />
   <!-- Project Logos -->
   <link rel="preload" as="image" href="assets/project-logos/bound-athlete.png" />
   <!-- Miscellaneous -->
