Adds photos to the about page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <body>
     <app-root></app-root>
   </body>
+  <!-- Personal Photos -->
+  <link rel="preload" as="image" href="assets/personal-photos/beach.jpeg" />
+  <link rel="preload" as="image" href="assets/personal-photos/campbell-summit.JPG" />
+  <link rel="preload" as="image" href="assets/personal-photos/football.JPG" />
+  <link rel="preload" as="image" href="assets/personal-photos/golf.jpeg" />
+  <link rel="preload" as="image" href="assets/personal-photos/hike.jpeg" />
   <!-- Technology & Language Logos -->
   <link rel="preload" as="image" href="assets/logos/angular.png" />
   <link rel="preload" as="image" href="assets/logos/angularjs.png" />
