Finalizes about page styling
Adds pictures of bound and improves overall style.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@
   <link rel="preload" as="image" href="assets/logos/aws-iam.png" />
   <link rel="preload" as="image" href="assets/logos/alexa.png" />
   <link rel="preload" as="image" href="assets/logos/ruby.png" />
-  <!-- Project Logos -->
-  <link rel="preload" as="image" href="assets/project-logos/bound-athlete.png" />
+  <!-- Project Logos & Images -->
+  <link rel="preload" as="image" href="assets/projects/bound/bound-athlete.png" />
+  <link rel="preload" as="image" href="assets/projects/bound/bound-1.png" />
+  <link rel="preload" as="image" href="assets/projects/bound/bound-2.png" />
+  <link rel="preload" as="image" href="assets/projects/bound/bound-3.png" />
+  <link rel="preload" as="image" href="assets/projects/bound/bound-4.png" />
+  <link rel="preload" as="image" href="assets/projects/bound/bound-5.png" />
   <!-- Miscellaneous -->
   <link rel="preload" as="image" href="assets/logos/gmail.png" />
   <link rel="preload" as="image" href="assets/logos/instagram.png" />
