Adds site avatar

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>NVZ - Home</title>
+    <title>NVZ</title>
     <base href="/personal-website/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/personal-photos/avatar.jpeg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <app-root></app-root>
   </body>
   <!-- Personal Photos -->
+  <link rel="preload" as="image" href="assets/personal-photos/avatar.jpeg" />
   <link rel="preload" as="image" href="assets/personal-photos/beach.jpeg" />
   <link rel="preload" as="image" href="assets/personal-photos/campbell-summit.JPG" />
   <link rel="preload" as="image" href="assets/personal-photos/football.JPG" />
