Fixes layering issues with navigation menu
Moves images around for better style and configures redirect back to
home screen for an invalid URLs.

--- a/index.html
+++ b/index.html
@@ -61,4 +61,5 @@
   <!-- Miscellaneous -->
   <link rel="preload" as="image" href="assets/logos/gmail.png" />
   <link rel="preload" as="image" href="assets/logos/instagram.png" />
+  <link rel="preload" as="image" href="assets/logos/x.png" />
 </html>
