Shrinks image for faster loader
Ensures footer text is loaded so its always visible.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
   <!-- Personal Photos -->
   <link rel="preload" as="image" href="assets/personal-photos/avatar.jpeg" />
   <link rel="preload" as="image" href="assets/personal-photos/beach.jpeg" />
-  <link rel="preload" as="image" href="assets/personal-photos/campbell-summit.JPG" />
-  <link rel="preload" as="image" href="assets/personal-photos/football.JPG" />
+  <link rel="preload" as="image" href="assets/personal-photos/campbell-summit.jpg" />
   <link rel="preload" as="image" href="assets/personal-photos/golf.jpeg" />
-  <link rel="preload" as="image" href="assets/personal-photos/hike.jpeg" />
   <!-- Project Logos & Images -->
   <link rel="preload" as="image" href="assets/projects/bound/bound-athlete.png" />
   <link rel="preload" as="image" href="assets/projects/bound/bound-1.png" />
