Adds quote and uses smaller images

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <title>Nick Zambelli</title>
     <base href="/personal-website/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="assets/personal-photos/avatar.jpeg">
+    <link rel="icon" type="image/x-icon" href="assets/personal-photos/avatar.jpg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <app-root></app-root>
   </body>
   <!-- Personal Photos -->
-  <link rel="preload" as="image" href="assets/personal-photos/avatar.jpeg" />
-  <link rel="preload" as="image" href="assets/personal-photos/beach.jpeg" />
+  <link rel="preload" as="image" href="assets/personal-photos/avatar.jpg" />
+  <link rel="preload" as="image" href="assets/personal-photos/beach.jpg" />
   <link rel="preload" as="image" href="assets/personal-photos/campbell-summit.jpg" />
-  <link rel="preload" as="image" href="assets/personal-photos/golf.jpeg" />
+  <link rel="preload" as="image" href="assets/personal-photos/golf.jpg" />
   <!-- Project Logos & Images -->
   <link rel="preload" as="image" href="assets/projects/bound/bound-athlete.png" />
   <link rel="preload" as="image" href="assets/projects/bound/bound-1.png" />
